@@ -63,6 +63,7 @@ of the day</q> server.  Current code for the server is in
     <li><a href="row.html">The row database abstraction</a></li>
     <li><a href="dirdbm.html">Using Dirdbm</a></li>
     <li><a href="components.html">Interfaces and Adapters (Component Architecture)</a></li>
+    <li><a href="upgrading.html">Upgrading and Rebuilding Applications</a></li>
     </ul>
 </li>
 
